--- a/src/pages/HomePage/HomePage.css
+++ b/src/pages/HomePage/HomePage.css
@@ -1,20 +1,30 @@
 .home-page {
-    display: grid;
-    height: 100vh;
-    width: 100vw;
+  display: grid;
+  height: 100vh;
+  width: 100vw;
 }
 .grid-container {
-    grid-template-columns: 0.5fr 2fr;
-    grid-template-rows: 0.5fr 3fr 1fr;
-    grid-template-areas:
-      "navbar navbar"
-      "sidebar main-content"
-      "sidebar main-content"
-      "main-footer main-footer";
+  grid-template-columns: 0.5fr 2fr;
+  grid-template-rows: 0.5fr 3fr 1fr;
+  grid-template-areas:
+    "navbar navbar"
+    "sidebar main-content"
+    "sidebar main-content"
+    "main-footer main-footer";
 }
-  
 .main-content {
   grid-area: main-content;
 }
-
-  
+.main-display {
+  display: flex;
+  flex-direction: column;
+}
+.inner-container {
+  max-width: 96rem;
+  padding: 1.5rem 1.5rem;
+}
+.note-list {
+  display: grid;
+  grid-gap: 1rem;
+  grid-template-columns: repeat(auto-fit, minmax(25rem, 1fr));
+}
