--- a/src/component/SavedNote/SavedNote.css
+++ b/src/component/SavedNote/SavedNote.css
@@ -1,5 +1,37 @@
 .add-saved-note {
-  width: 33%;
+  min-height: 30vh;
   display: flex;
   flex-direction: column;
+  justify-content: space-between;
+  border: 1.5px solid var(--COLOR-PRIMARY);
+  border-radius: 1rem;
+  padding: 1rem 1rem 0 1rem;
+}
+.button-display {
+  display: flex;
+  justify-content: flex-start;
+  width: 50%;
+}
+.note-btn {
+  padding: 3px;
+  margin: 7px 1rem 7px 7px;
+  cursor: pointer;
+  border: 0;
+  background-color: transparent;
+  color: var(--COLOR-SOCIAL-ICON);
+}
+.note-title {
+  font-weight: 500;
+  font-size: 2rem;
+  display: flex;
+  justify-content: space-between;
+}
+.date-priority {
+  display: flex;
+  justify-content: space-between;
+}
+.priority-chips {
+  background-color: var(--ALERT-WARNING-COLOR);
+  padding: 5px;
+  border-radius: 1rem;
 }
