feat:- created filter notes functionality
created filter functionality

--- a/src/component/Sidebar/Sidebar.css
+++ b/src/component/Sidebar/Sidebar.css
@@ -1,30 +1,55 @@
 .sidebar {
-    grid-area: sidebar;
-    display: flex;
-    flex-direction: column;
+  grid-area: sidebar;
+
+  display: flex;
+  flex-direction: column;
 }
 .md-margin {
-    margin-top: 2rem;
+  margin-top: 2rem;
 }
 .md-pd {
-    padding: 1.2rem 0.5rem 1.2rem 1.5rem;
+  padding: 1.2rem 0.5rem 1.2rem 1.5rem;
 }
 .aside-heading {
-    text-decoration: none;
-    font-weight: 500;
-    font-size: 2rem;
-    color: black;
-    cursor: pointer;
+  text-decoration: none;
+  font-weight: 500;
+  font-size: 2rem;
+  color: var(--COLOR-BLACK);
+  cursor: pointer;
 }
-  
+
 .active-link {
-    background-color: #86efac;
-    border-top-right-radius: 1.5rem;
-    border-bottom-right-radius: 1.5rem;
+  background-color: var(--darkerofseconadary);
+  border-top-right-radius: 1.5rem;
+  border-bottom-right-radius: 1.5rem;
 }
 .inactive-link:hover {
-    background-color: rgb(222, 222, 222);
-    border-top-right-radius: 1.5rem;
-    border-bottom-right-radius: 1.5rem;
+  background-color: rgb(222, 222, 222);
+  border-top-right-radius: 1.5rem;
+  border-bottom-right-radius: 1.5rem;
 }
-  
+.note-filter-sidebar {
+  display: flex;
+  flex-direction: column;
+}
+.filter {
+  padding: 1rem 0;
+  display: flex;
+  flex-direction: column;
+}
+.filter-pd {
+  padding-bottom: 5px;
+  cursor: pointer;
+}
+.filter-margin {
+  margin-right: 5px;
+}
+.clearAll-flex {
+  display: flex;
+  justify-content: space-between;
+}
+.clearAll {
+  cursor: pointer;
+  text-decoration: underline;
+  padding-right: 2rem;
+}
