--- a/src/component/SavedNote/SavedNote.css
+++ b/src/component/SavedNote/SavedNote.css
@@ -1,5 +1,5 @@
 .add-saved-note {
-  min-height: 30vh;
+  width: 33%;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -34,4 +34,7 @@
   background-color: var(--ALERT-WARNING-COLOR);
   padding: 5px;
   border-radius: 1rem;
+}
+.pd-top {
+  padding-top: 5px;
 }
