Feat:- Created Edit and Colored Note
Created Edit and Colored Notes

--- a/src/App.css
+++ b/src/App.css
@@ -76,6 +76,12 @@
   --COLOR-PRIMARY: #16a34a;
   --COLOR-SECONDARY: #bbf7d0;
   --COLOR-SOCIAL-ICON: #475569;
+  --COLOR-PINK: rgb(255, 191, 202);
+  --COLOR-BLUE: rgb(139, 229, 245);
+  --COLOR-YELLOW: rgb(249, 249, 192);
+  --COLOR-RED: rgb(225, 141, 141);
+  --COLOR-PURPLE: rgb(133, 81, 133);
+  --COLOR-GREEN: rgb(139, 183, 139);
   --PRIMARY-HOVER: #15803d;
   --NOTIFICATION-COLOR: #f97316;
   --offgreen: #f0fdf4;
