--- a/src/component/Note/Note.css
+++ b/src/component/Note/Note.css
@@ -50,7 +50,7 @@
 }
 .priority {
   width: 16vw;
-  max-height: 9vh;
+  height: 4.5vh;
 }
 .save-btn {
   width: 10%;
@@ -60,7 +60,7 @@
   margin: 8px;
   border-radius: 1rem;
   position: absolute;
-  right: 0;
+  right: 5px;
   bottom: 0;
 }
 .save-btn:hover {
@@ -110,4 +110,37 @@
   height: 2rem;
   border-radius: 50%;
   cursor: pointer;
+}
+
+.disable-btn {
+  width: 10%;
+  padding: 5px;
+  background-color: var(--COLOR-WHITE);
+  font-size: 1.5rem;
+  margin: 8px;
+  border-radius: 1rem;
+  position: absolute;
+  right: 0;
+  bottom: 0;
+  cursor: not-allowed;
+}
+.no-display {
+  display: none;
+}
+@media only screen and (max-width: 700px) {
+  .save-icon {
+    display: none;
+  }
+  .mediaquery-save-icon {
+    display: block;
+    position: absolute;
+    right: 0;
+    bottom: 0;
+    margin: 1rem;
+    background-color: transparent;
+    cursor: pointer;
+  }
+  .disable-save-icon {
+    cursor: not-allowed;
+  }
 }
