--- a/src/pages/HomePage/HomePage.css
+++ b/src/pages/HomePage/HomePage.css
@@ -1,7 +1,6 @@
 .home-page {
   display: grid;
   height: 100vh;
-  /* width: 100vw; */
 }
 .grid-container {
   grid-template-columns: 0.6fr 2fr;
@@ -10,7 +9,6 @@
     "navbar navbar"
     "sidebar main-content"
     "sidebar main-content";
-    /* "main-footer main-footer"; */
 }
 .main-content {
   grid-area: main-content;
@@ -20,11 +18,49 @@
   flex-direction: column;
 }
 .inner-container {
-  /* max-width: 96rem; */
   padding: 1.5rem 1.5rem 1.5rem 1.5rem;
 }
 .note-list {
   display: grid;
   grid-gap: 1rem;
   grid-template-columns: repeat(auto-fit, minmax(25rem, 0.7fr));
+}
+.filter-icon {
+  display: none;
+}
+.modal-mediaquery {
+  display: none;
+}
+.footer {
+  display: none;
+}
+
+@media only screen and (max-width: 700px) {
+  .grid-container {
+    grid-template-columns: 1fr;
+    grid-template-rows: 0.3fr 2fr 0.3fr;
+    grid-template-areas:
+      "navbar"
+      " main-content"
+      "footer";
+  }
+  .filter-icon-mediaquery {
+    display: block;
+    position: absolute;
+    top: 11rem;
+    right: 2rem;
+    margin-left: 1.5rem;
+  }
+  .filter-icon-mediaquery button {
+    border: none;
+    background-color: transparent;
+  }
+  .filter-icon-mediaquery button:hover {
+    cursor: pointer;
+    color: var(--COLOR-PRIMARY);
+  }
+  .footer-mediaquery {
+    display: block;
+    grid-area: footer;
+  }
 }
